force-app/main/default/objects/kt_checklist__Checklist_Item__c/fields/kt_checklist__Checked__c.field-meta.xml
<CustomField>
    <fullName>kt_checklist__Checked__c</fullName>
    <label>Checked</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>