force-app/main/default/objects/kt_checklist__Checklist_Item__c/fields/kt_checklist__Checklist__c.field-meta.xml
<CustomField>
    <fullName>kt_checklist__Checklist__c</fullName>
    <label>Checklist</label>
    <referenceTo>kt_checklist__Checklist__c</referenceTo>
    <relationshipLabel>Checklist Items</relationshipLabel>
    <relationshipName>Checklist_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>