force-app/main/default/objects/kt_checklist__Checklist_Item__c/fields/kt_checklist__Checklist_Template_Item__c.field-meta.xml
<CustomField>
    <fullName>kt_checklist__Checklist_Template_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Checklist Template Item</label>
    <referenceTo>kt_checklist__Checklist_Template_Item__c</referenceTo>
    <relationshipLabel>Checklist Items</relationshipLabel>
    <relationshipName>Checklist_Items</relationshipName>
    <type>Lookup</type>
</CustomField>