force-app/main/default/objects/kt_checklist__Checklist_Item__c/fields/kt_checklist__CompletedBy__c.field-meta.xml
<CustomField>
    <fullName>kt_checklist__CompletedBy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Completed By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Checklist_Items</relationshipName>
    <type>Lookup</type>
</CustomField>