force-app/main/default/objects/kt_checklist__Checklist_Item__c/fields/kt_checklist__CompletedDate__c.field-meta.xml
<CustomField>
    <fullName>kt_checklist__CompletedDate__c</fullName>
    <label>Completed Date</label>
    <type>DateTime</type>
</CustomField>