force-app/main/default/objects/kt_checklist__Checklist_Item__c/listViews/kt_checklist__All.listView-meta.xml
<ListView>
    <fullName>kt_checklist__All</fullName>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>